# cats-radio-node

./: Cargo.toml  LICENSE.md  README.md  build.rs  cats-radio-node.db  style.css  tailwind.config.js
migrations/: 20231230_create.sql
src/: config.rs  db.rs  main.rs  radio.rs  ui.rs
static/: chat.js  main.js  send.js  style.css
templates/: chat.html  dashboard.html  foot.html  head.html  incoming.html  send.html  settings.html  settings_applied.html
