[package]
name = "cats-radio-node"
version = "0.1.0"
edition = "2021"
authors = ["Matthias HB9EGM <hb9egm@mpb.li>"]
license = "MIT"

[dependencies]
anyhow = "1.0"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
axum = "0.7"
simple_logger = "4.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "sqlite"]}
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }

# Websockets example in https://github.com/tokio-rs/axum/tree/main/examples/websockets
# tokio-tungstenite = "0.21"
