[package]
name = "cats-radio-node"
version = "0.1.0"
edition = "2021"
authors = ["Matthias HB9EGM <hb9egm@mpb.li>"]
license = "MIT"

[dependencies]
anyhow = "1.0"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
axum = "0.7"
simple_logger = "4.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "sqlite"]}
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }

ham-cats = { git = "https://gitlab.scd31.com/cats/ham-cats", commit = "d22f541c9a7e1c3a6c6e9449d87212b060f5edfb" }
half = { version = "2" }
rf4463 = { git = "https://gitlab.scd31.com/stephen/rf4463-lib", commit = "79c8def87540f8ab2663bfa3c9fb13db344ef84e" }
rppal = { version = "0.14", features = ["hal"] }
tonic = { version = "0.10", features = ["tls", "tls-roots"] }
async-stream = "0.2"
rand = "0.8"

# Websockets example in https://github.com/tokio-rs/axum/tree/main/examples/websockets
# tokio-tungstenite = "0.21"

[[bin]]
name = "fake-radio"
